--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.4.2",
     "core-js": "^3.6.4",
+    "serve": "^11.3.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
